<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/corne_radius_cardview"
    android:layout_margin="@dimen/margin_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionName_imageCardView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="@dimen/padding_card_view"
            android:background="@color/backgound_cardview">

            <TextView
                android:id="@+id/usernameCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carlos_vargas_cardview"
                android:textSize="24sp"
                android:textColor="@color/textColor_White"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hace_cardview"
                    android:textColor="@color/textColor_White"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cantidadDiasCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dias_cardview"
                    android:textColor="@color/textColor_White"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:id="@+id/cantidadMeGustaCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_gusta_cardview"
                    android:textSize="16sp"
                    android:textColor="@color/textColor_White"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>